// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Profile Components render ProfileController component 1`] = `
<ProfileController
  classes={
    Object {
      "buttons": "ProfileController-buttons-11",
      "root": "ProfileController-root-10",
    }
  }
  data={Array []}
  skill="Javascript"
/>
`;

exports[`test Profile Components render TabContainer component 1`] = `
<TabContainer
  classes={
    Object {
      "root": "TabContainer-root-12",
    }
  }
  skill="Javascript"
/>
`;

exports[`test Profile/skills Components render Label component 1`] = `
<Label
  classes={
    Object {
      "root": "Label-root-1",
    }
  }
  value="Javascript"
/>
`;

exports[`test Profile/skills Components render NewMilestoneDialog component 1`] = `
<div>
  <WithStyles(Dialog)
    aria-labelledby="form-dialog-title"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(DialogTitle)
      id="form-dialog-title"
    >
      New milestone
    </WithStyles(DialogTitle)>
    <WithStyles(DialogContent)>
      <WithStyles(DialogContentText)>
        To add a new milestone please fill in all inputfields.
      </WithStyles(DialogContentText)>
      <WithStyles(IntegrationReactSelect)
        allSkills={
          Array [
            "Programming/Java",
            "Programming/Java/Python",
            "C++/Python",
            "C++/Python",
            "C++/Python",
            "C++/Python",
            "C++/Python",
            "C++/Python",
          ]
        }
      />
      <WithStyles(RadioButtonsGroup)
        level={0}
      />
      <WithStyles(Component)
        data={
          Object {
            "error": false,
            "name": "Date",
            "value": "2019-01-09",
          }
        }
        onChange={[Function]}
      />
      <WithStyles(Component)
        data={
          Object {
            "error": false,
            "name": "Note",
            "value": "",
          }
        }
        onChange={[Function]}
      />
    </WithStyles(DialogContent)>
    <WithStyles(DialogActions)>
      <WithStyles(Button)
        color="primary"
        onClick={[Function]}
      >
        Cancel
      </WithStyles(Button)>
      <WithStyles(Button)
        color="primary"
        onClick={[Function]}
      >
        Submit
      </WithStyles(Button)>
    </WithStyles(DialogActions)>
  </WithStyles(Dialog)>
</div>
`;

exports[`test Profile/skills Components render NewSkillDialog component 1`] = `
<div>
  <WithStyles(Dialog)
    aria-labelledby="form-dialog-title"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(DialogTitle)
      id="form-dialog-title"
    >
      New skill
    </WithStyles(DialogTitle)>
    <WithStyles(DialogContent)>
      <WithStyles(DialogContentText)>
        To add a new Skill please fill in all inputfields.
      </WithStyles(DialogContentText)>
      <WithStyles(IntegrationReactSelect)
        allSkills={
          Array [
            "Programming/Python",
            "Programming/Java/C++",
            "Programming/Java/C++/Python",
            "C++/C++++",
          ]
        }
        placeholder="Select a skill to add"
      />
      <WithStyles(Component)
        data={
          Object {
            "error": false,
            "name": "Level",
            "value": "",
          }
        }
        onChange={[Function]}
        required={true}
      />
    </WithStyles(DialogContent)>
    <WithStyles(DialogActions)>
      <WithStyles(Button)
        color="primary"
        onClick={[Function]}
      >
        Cancel
      </WithStyles(Button)>
      <WithStyles(Button)
        color="primary"
        onClick={[Function]}
      >
        Submit
      </WithStyles(Button)>
    </WithStyles(DialogActions)>
  </WithStyles(Dialog)>
</div>
`;

exports[`test Profile/skills Components render ProfileExpensionPanel component 1`] = `
<ControlledExpansionPanels
  classes={
    Object {
      "heading": "ControlledExpansionPanels-heading-3",
      "row": "ControlledExpansionPanels-row-5",
      "secondaryHeading": "ControlledExpansionPanels-secondaryHeading-4",
    }
  }
  isEditable={true}
  skill="Javascript"
/>
`;

exports[`test Profile/skills Components render ProfileExpensionPanel component 2`] = `
<ControlledExpansionPanels
  classes={
    Object {
      "heading": "ControlledExpansionPanels-heading-3",
      "row": "ControlledExpansionPanels-row-5",
      "secondaryHeading": "ControlledExpansionPanels-secondaryHeading-4",
    }
  }
  isEditable={false}
  skill="Javascript"
/>
`;

exports[`test Profile/skills Components render SkillProfileList component 1`] = `
<SkillProfileList
  categories={
    Array [
      Object {
        "skillname": "Java",
      },
      Object {
        "skillname": "Python",
      },
      Object {
        "skillname": "Haskell",
      },
    ]
  }
  classes={
    Object {
      "panels": "SkillProfileList-panels-2",
    }
  }
  isEditable={true}
/>
`;

exports[`test Profile/skills Components render SkillProfileList component 2`] = `
<SkillProfileList
  categories={
    Array [
      Object {
        "skillname": "Java",
      },
      Object {
        "skillname": "Python",
      },
      Object {
        "skillname": "Haskell",
      },
    ]
  }
  classes={
    Object {
      "panels": "SkillProfileList-panels-2",
    }
  }
  isEditable={false}
/>
`;

exports[`test Profile/stats Components render Chart component 1`] = `
<div
  className="Chart"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgba(75,192,192,1)",
            "borderColor": "rgba(75,192,192,1)",
            "data": Array [],
            "fill": false,
            "label": "Javascript",
            "pointBorderColor": "rgba(75,192,192,1)",
            "pointBorderWidth": "rgba(75,192,192,1)",
            "pointHoverBackgroundColor": "rgba(75,192,192,1)",
            "pointHoverBorderColor": "rgba(75,192,192,1)",
          },
        ],
      }
    }
    options={
      Object {
        "maintainAspectRatio": false,
        "pan": Object {
          "enabled": undefined,
          "mode": "x",
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "position": "bottom",
              "ticks": Object {
                "display": undefined,
              },
              "time": Object {
                "displayFormats": Object {
                  "month": "MM/YY",
                },
                "tooltipFormat": "ll",
                "unit": "month",
              },
              "type": "time",
            },
          ],
          "yAxes": Array [
            Object {
              "ticks": Object {
                "beginAtZero": true,
                "display": undefined,
                "max": 7,
                "stepValue": 1,
                "steps": 0.5,
              },
            },
          ],
        },
        "startAtZero": true,
        "zoom": Object {
          "enabled": undefined,
          "mode": "xy",
          "rangeMax": Object {
            "y": 30,
          },
          "rangeMin": Object {
            "y": -10,
          },
        },
      }
    }
  />
</div>
`;

exports[`test Profile/stats Components render SimpleCard component 1`] = `
<SimpleCard
  classes={
    Object {
      "appBar": "SimpleCard-appBar-7",
      "container": "SimpleCard-container-9",
      "flex": "SimpleCard-flex-8",
      "root": "SimpleCard-root-6",
    }
  }
  data={Array []}
  skill="Javascript"
/>
`;

exports[`test Profile/stats Components render SkillStatisticsGrid component 1`] = `
<div
  className="Chart"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgba(75,192,192,1)",
            "borderColor": "rgba(75,192,192,1)",
            "data": Array [],
            "fill": false,
            "label": "Javascript",
            "pointBorderColor": "rgba(75,192,192,1)",
            "pointBorderWidth": "rgba(75,192,192,1)",
            "pointHoverBackgroundColor": "rgba(75,192,192,1)",
            "pointHoverBorderColor": "rgba(75,192,192,1)",
          },
        ],
      }
    }
    options={
      Object {
        "maintainAspectRatio": false,
        "pan": Object {
          "enabled": undefined,
          "mode": "x",
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "position": "bottom",
              "ticks": Object {
                "display": undefined,
              },
              "time": Object {
                "displayFormats": Object {
                  "month": "MM/YY",
                },
                "tooltipFormat": "ll",
                "unit": "month",
              },
              "type": "time",
            },
          ],
          "yAxes": Array [
            Object {
              "ticks": Object {
                "beginAtZero": true,
                "display": undefined,
                "max": 7,
                "stepValue": 1,
                "steps": 0.5,
              },
            },
          ],
        },
        "startAtZero": true,
        "zoom": Object {
          "enabled": undefined,
          "mode": "xy",
          "rangeMax": Object {
            "y": 30,
          },
          "rangeMin": Object {
            "y": -10,
          },
        },
      }
    }
  />
</div>
`;
